[package]
name = "sherloque"
version = "0.0.1"
authors = ["Wong Jia Hau <hou32hou@gmail.com>"]
edition = "2018"
description = "A language agnostic SQL SDK generator."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.9.0"
